--- a/Resources/Styles/TextBoxStyles.xaml
+++ b/Resources/Styles/TextBoxStyles.xaml
@@ -5,7 +5,7 @@
 
     <Style x:Key="TextBoxStyle" TargetType="TextBox">
         <Setter Property="Background" Value="{StaticResource SecondaryButtonBrush}"/>
-        <Setter Property="Height" Value="46"/>
+        <Setter Property="Height" Value="44"/>
         <Setter Property="FontFamily" Value="{StaticResource SFProRegular}"/>
         <Setter Property="FontSize" Value="12"/>
         <Setter Property="Padding" Value="6,3"/>
@@ -24,8 +24,8 @@
                         <Grid>
                             <TextBlock Text="{TemplateBinding Tag}" 
                                    Foreground="{StaticResource SecondaryBrush}"
+                                   FontFamily="{StaticResource SFProSemiBold}"
                                    FontSize="10"
-                                   FontWeight="SemiBold"
                                    VerticalAlignment="Top"
                                    Margin="8,2,5,0"/>
 
@@ -58,7 +58,7 @@
 
     <Style x:Key="PasswordBoxStyle" TargetType="PasswordBox">
         <Setter Property="Background" Value="{StaticResource SecondaryButtonBrush}"/>
-        <Setter Property="Height" Value="46"/>
+        <Setter Property="Height" Value="44"/>
         <Setter Property="FontFamily" Value="{StaticResource SFProRegular}"/>
         <Setter Property="FontSize" Value="12"/>
         <Setter Property="Padding" Value="6,3"/>
@@ -166,8 +166,8 @@
 
     <Style x:Key="ComboBoxStyle" TargetType="ComboBox">
         <Setter Property="Background" Value="{StaticResource SecondaryButtonBrush}"/>
-        <Setter Property="Height" Value="46"/>
-        <Setter Property="FontFamily" Value="SF Pro Display"/>
+        <Setter Property="Height" Value="44"/>
+        <Setter Property="FontFamily" Value="{StaticResource SFProRegular}"/>
         <Setter Property="FontSize" Value="12"/>
         <Setter Property="Padding" Value="6,3"/>
         <Setter Property="BorderThickness" Value="1"/>
