--- a/Resources/Styles/UIElementals.xaml
+++ b/Resources/Styles/UIElementals.xaml
@@ -1,11 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!-- Tipografías utilizadas -->
-    <FontFamily x:Key="SFProRegular">/Resources/Fonts/#SF Pro Display</FontFamily>
-    <FontFamily x:Key="SFProMedium">/Resources/Fonts/#SF Pro Display Bold</FontFamily>
-    <FontFamily x:Key="SFProSemiBold">/Resources/Fonts/#SF Pro Display Bold</FontFamily>
-    <FontFamily x:Key="SFProBold">/Resources/Fonts/#SF Pro Display Bold</FontFamily>
-    <FontFamily x:Key="SFProItalic">/Resources/Fonts/#SF Pro Display Italic</FontFamily>
+    <FontFamily x:Key="SFProRegular">pack://application:,,,/Resources/Fonts/SFProDisplay-Regular.otf#SF Pro Display</FontFamily>
+    <FontFamily x:Key="SFProMedium">pack://application:,,,/Resources/Fonts/SFProDisplay-Medium.otf#SF Pro Display</FontFamily>
+    <FontFamily x:Key="SFProSemiBold">pack://application:,,,/Resources/Fonts/SFProDisplay-Semibold.otf#SF Pro Display</FontFamily>
+    <FontFamily x:Key="SFProBold">pack://application:,,,/Resources/Fonts/SFProDisplay-Bold.otf#SF Pro Display</FontFamily>
+    <FontFamily x:Key="SFProItalic">pack://application:,,,/Resources/Fonts/SFProDisplay-Italic.otf#SF Pro Display</FontFamily>
 
     <!-- Definición de colores -->
     <Color x:Key="BackgroundColor">#F4F4FA</Color>
