--- a/Views/SuppliesModule/RegisterSupplyPage.xaml
+++ b/Views/SuppliesModule/RegisterSupplyPage.xaml
@@ -111,7 +111,8 @@
                                     <RowDefinition Height="Auto" />
                                 </Grid.RowDefinitions>
 
-                                <TextBox Grid.Row="0" Grid.Column="0"
+                                <TextBox x:Name="TbSupplyName"
+                                         Grid.Row="0" Grid.Column="0"
                                          Tag="{DynamicResource RegSupply_TbSupplyName}" 
                                          Style="{DynamicResource TextBoxStyle}"
                                          HorizontalAlignment="Stretch" VerticalAlignment="Top"
@@ -134,7 +135,8 @@
                                           Margin="0,8,10,8"
                                           DisplayMemberPath="Name"
                                           SelectedValuePath="Name"/>
-                                <ComboBox Grid.Row="1" Grid.Column="1"
+                                <ComboBox x:Name="CbSupplyMeasure"
+                                          Grid.Row="1" Grid.Column="1"
                                           Tag="{DynamicResource RegSupply_CbSupplyMeasure}"
                                           Style="{DynamicResource ComboBoxStyle}"
                                           Margin="10,8,0,8"/>
