--- a/Views/ProductsModule/RegisterProduct.xaml
+++ b/Views/ProductsModule/RegisterProduct.xaml
@@ -7,7 +7,9 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="RegisterProduct">
-
+    <Page.Resources>
+        <BooleanToVisibilityConverter x:Key="BoolToVis"/>
+    </Page.Resources>
     <Grid Background="{StaticResource BackgroundBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="68"/>
@@ -112,21 +114,24 @@
                                  Tag="{DynamicResource RegProduct_Price}"
                                  Margin="7"
                                  PreviewTextInput="PreviewTextInput_TbUnitPrice"
-                                 LostFocus="LostFocus_TbUnitPrice" />
+                                  />
                             <TextBox Grid.Column="1" Style="{StaticResource TextBoxStyle}" 
                                  Tag="{DynamicResource RegProduct_Quantity}"
                                  Margin="7"
                                  PreviewTextInput="PreviewTextInput_TbUnitPrice"
-                                 LostFocus="LostFocus_TbUnitPrice"
+                                 
                             />
                         </Grid>
                         <CheckBox Grid.Row="2" Content="Es un producto preparado."
                                   Style="{DynamicResource CheckBoxStyle}"
+                                  Checked="CbPrepared_Checked"
+                                    Unchecked="CbPrepared_Unchecked"
                                   Name="CbPrepared"
                                   />
-                        <Button Grid.Row="3" x:Name="addRecipe" Content="{DynamicResource Recipes_BtnNewRecipe}"
+                        <Button Grid.Row="3" x:Name="BtnAddRecipe" Content="{DynamicResource Recipes_BtnNewRecipe}"
                                 Style="{StaticResource PrimaryButtonStyle}"
                                 Width="150"
+                                Visibility="{Binding IsChecked, ElementName=CbPrepared, Converter={StaticResource BoolToVis}}"
                                 Click="Click_BtnAddRecipe">
                             <Button.Tag>/Resources/Icons/add-icon.png</Button.Tag>
                         </Button>
